add constants and utils

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.22.0
-  firebase_auth: ^4.12.1
+  firebase_auth:
   firebase_analytics: ^10.6.3
 
   get: ^4.6.3
